# bilzaa2d

./: Cargo.toml  README.md  delme.md
documentation/: external_api.md
src/: animation.rs  attributes.rs  bilzaa2d.rs  bns.rs  lib.rs  main-safe.rs  main.rs  shape.rs
src/attributes/: attribvalues.rs  mod.rs
src/shape/: datanode.rs  mod.rs
tests/: again.rs  basic.rs
