[package]
name = "bilzaa2d"
version = "0.1.0"
authors = ["bilal <skillzaa.com@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bilzaa2dattributes = "0.1.1"
bilzaa2dcounter = "0.1.1"
playhead = "0.0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
