[package]
name = "bilzaa2d"
version = "0.1.0"
authors = ["bilal <skillzaa.com@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bilzaa2dutil = "0.0.9"
# bilzaa2dattributes = "0.1.6"
bilzaa2dcounter = "0.1.4"
playhead = "0.0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
